crates/rustynes-test-harness/tests/snapshots/external_extended__extended_nrom_1942.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-000-NROM/1942.nes
rom_sha256=f30099be7051f2611b039e930850b3aad463845d4eb8a401c76266d577b973a6
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=4afdc43739b28af9
checkpoint f600 fb_fnv1a64=4d4f9b1b875522f4
