crates/rustynes-test-harness/tests/snapshots/external_extended__extended_sunsoft1_atlantis_no_nazo.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-184-Sunsoft1/Atlantis no Nazo (Japan).nes
rom_sha256=ba91bb87d51e094bc0ee3980d614d31f0ea3a6f08a1dc549fd9854f3f20b0d49
frames=600
fb_bytes=245760
cycles=17838520
audio_samples=439524
audio_fnv1a64=da77eaf8dc10b045
checkpoint f600 fb_fnv1a64=a8e00e268a3ddeaa
